Javadoc updates. @Override. isEmpty -> isBlank. Strongly typed Collections.